Fixed the 1px shift of comment content on load.

--- a/static_resources/css/site.css
+++ b/static_resources/css/site.css
@@ -39,6 +39,8 @@ abbr.timeago {
 
 .comment .avatar-container {
 	border-left: 1px solid #EEE;
+	min-width: 65px;
+	min-height: 65px;
 }
 
 .avatar-container {
